adicionado payment_method_id no checkout, payload e documentação atualizada
